修改 css 查詢頁面排版

--- a/src/app/stock-data/stock-data.component.css
+++ b/src/app/stock-data/stock-data.component.css
@@ -2,12 +2,11 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    text-align: left;
   }
   
   td,
   th {
-    border: 1px solid #dddddd;
-    text-align: left;
     padding: 8px;
   }
   
@@ -15,3 +14,6 @@ table {
     background-color: #dddddd;
   }
   
+  .cdk-header-cell{
+    background-color: gray;
+  }
