刪除 routing 設定問題 以及修改新的subscribe

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<h1>{{title}}</h1>
+<h1>登入</h1>
 <form method="post">
     <div class="container">
       <div>
@@ -11,6 +11,6 @@
         <input type="password" [formControl]="password">
       </div>
       <button type="button" (click)="doLogin()">登入</button>
+      <button type="button" (click)="doLogin()">註冊</button>
     </div>
   </form>
-
